Add new page to navigation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 				<li>
 					<a href="#">Contact page</a>
 				</li>
+				<li>
+					<a href="#">Another page</a>
+				</li>
 			</ul>
 		</nav>
 
