--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<header>
 			<a href="#">Logo</a>
 		</header>
+		<div>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, reiciendis iure. Sunt ut quibusdam exercitationem repudiandae in aliquam eligendi, officia unde fugiat, dolor ab dolorum dolorem minima, maiores numquam. Error.
+		</div>
 
 		<nav>
 			<ul>
